GNOME Bugzilla – Bug 657362
[oneiric] empathy crash at launch
Last modified: 2011-08-29 09:41:37 UTC
Package: empathy 3.1.5.1-1ubuntu1
Open bug in lauchpad.net https://bugs.launchpad.net/bugs/832405 (empathy:2664): tp-glib-CRITICAL **: tp_simple_client_factory_ensure_account: assertion `g_variant_is_object_path (object_path)' failed Program received signal SIGSEGV, Segmentation fault. 0x00000000004714a1 in chatroom_manager_parse_chatroom (manager=0x877180, node=<optimized out>) at empathy-chatroom-manager.c:280 280 empathy-chatroom-manager.c: Aucun fichier ou dossier de ce type. in empathy-chatroom-manager.c (gdb) backtrace
+ Trace 228209
Could you please attach your ~/.config/Empathy/chatrooms.xml ?
https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/832405/comments/6 : https://launchpadlibrarian.net/78201733/chatrooms.xml
https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/832405/comments/7 Id2ndR (fabien-id): "Removing the file ~/.config/Empathy/chatrooms.xml solve the issue. In fact I don't have any irc account registered in mission-control since months but this file was still here."
http://cgit.collabora.com/git/user/cassidy/empathy/log/?h=check-account-path-657362
+1
Merged to master.