chatroom_manager_parse_chatroom: check account path is valid

https://bugzilla.gnome.org/show_bug.cgi?id=657362